hphp/test/slow/enum_class/vshape_bad3.php.expectf

Fatal error: Cannot override previously defined constant F3::C in V3 in %s/vshape_bad3.php on line 17
